--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "solartweaks",
+  "name": "solar-tweaks",
   "version": "4.3.3",
-  "author": "SolarTweaks",
+  "author": "Solar-Tweaks",
   "contributors": [
     "RichardDorian",
     "770grappenmaker",
